--- a/about.html
+++ b/about.html
@@ -29,7 +29,13 @@
     </div>
 
 
-
+    <section class="hero-content">
+        <img src="img/headshot1.png" alt="Alice Beyer Profile Picture"  class="headshot-image">
+        <div class="hero-text">
+            <h1>Hi, I'm Alice Beyer</h1>
+            <p>UX/UI Designer & Digital Media Enthusiast</p>
+        </div>
+    </section>
     <!-- About Section -->
     <section class="about">
         <h2>About Me</h2>
@@ -56,14 +62,15 @@
         </ul>
     </section>
 
-    <!-- CTA Section -->
     <section class="cta">
-        <h2>Let's Create Something Great Together</h2>
-        <p>Check out my portfolio or get in touch to discuss your project!</p>
-        <a href="portfolio.html" class="btn">View Portfolio</a>
-        <a href="contact.html" class="btn">Contact Me</a>
+        <h2>Let's Collaborate</h2>
+        <p>Ready to bring your vision to life? Explore my work or reach out to discuss potential collaborations and opportunities.</p>
+        <div class="cta-buttons">
+            <a href="portfolio.html" class="btn">View Portfolio</a>
+            <a href="contact.html" class="btn">Contact Me</a>
+        </div>
     </section>
-
+    
     <footer class="footer">
         <div class="social-icons" style="display: flex; align-items: center; gap: 15px;">
             <!-- LinkedIn Link -->
