--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <div class="navbar">
         <div class="navbar-brand"><a href="index.html">ALICE BEYER</a></div> <!-- Name added here -->
+        <button class="toggle-button" onclick="toggleNav()">☰</button>sss
         <ul>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -90,6 +91,12 @@
         </a>
     </div>
 </section>
+
+
+<script> function toggleNav() {
+    const navLinks = document.querySelector('.nav-links');
+    navLinks.classList.toggle('active'); // Toggle the 'active' class
+}</script>
 <footer class="footer">
     <div class="social-icons" style="display: flex; align-items: center; gap: 15px;">
         <!-- LinkedIn Link -->
