--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
@@ -39,8 +39,8 @@
         <!-- Text and Headshot Container -->
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Hi, I'm Alice</h1>
-                <p>I'm a digital media designer with a passion for UX and communication design. I aim to create meaningful experiences that connect people and make technology more accessible.</p>
+                <h1>Hi, I'm Alice.</h1>
+                <p>I'm a digital media designer with a passion for UX and communication design.</p>
             </div>
             
             <!-- Headshot Image -->
