--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
 </head>
 <body>
@@ -41,7 +43,13 @@
             <img src="img/headshot1.png" alt="Alice Beyer Profile Picture" class="headshot-image-about">
             <div class="about-text">
                 <p> <strong>Alice is a digital media design student at RMIT in Melbourne, specialising in UX/UI design.</strong> Her passion for design is driven by a desire to create accessible, intuitive experiences that foster inclusive online communities. With 4 years of experience in the arts industry, she brings a creative, user-centered perspective to her design process, aiming to create work that is visually engaging and meaningful for diverse audiences. </p> <p> Often dubbed the unofficial tech support for her family, she has witnessed the frustration and stress caused by unintuitive interfaces. This experience has fueled her passion for understanding how these problems can be solved in an increasingly digital world and highlighted the importance of creating meaningful and accessible online experiences. </p>
-
+                <p>
+                    <br>
+                    <a href="cv/Alice Beyer CV.pdf" class="btn" download>
+                        <i class="fas fa-download" style="margin-right: 5px;"></i>
+                        Download CV
+                    </a>
+                </p>
             </div>
         </div>
     </section>
@@ -68,7 +76,7 @@
 
     <script> function toggleNav() {
         const navLinks = document.querySelector('.nav-links');
-        navLinks.classList.toggle('active'); // Toggle the 'active' class
+        navLinks.classList.toggle('active'); 
     }
     
     </script>
