--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <div class="navbar">
         <div class="navbar-brand"><a href="index.html">ALICE BEYER</a></div>
         <button class="toggle-button" onclick="toggleNav()">☰</button>
-        <div class="nav-links"> <!-- Ensure this wrapper is added -->
+        <div class="nav-links"> 
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -65,7 +65,6 @@
 
                 </div>
             </a>
-            <!-- Add more projects as needed -->
         
             <a href="project4.html" class="project-link">
                 <div class="project">
@@ -81,7 +80,7 @@
     </section>
     <script> function toggleNav() {
         const navLinks = document.querySelector('.nav-links');
-        navLinks.classList.toggle('active'); // Toggle the 'active' class
+        navLinks.classList.toggle('active'); 
     }
     
     </script>
