--- a/project1.html
+++ b/project1.html
@@ -22,7 +22,7 @@
     <div class="navbar">
         <div class="navbar-brand"><a href="index.html">ALICE BEYER</a></div>
         <button class="toggle-button" onclick="toggleNav()">☰</button>
-        <div class="nav-links"> <!-- Ensure this wrapper is added -->
+        <div class="nav-links"> 
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -110,10 +110,38 @@
 
         </div>
     </section>
+<!-- Projects Section -->
+<section class="projects1">
+    <div class="projects-header">
+        <h1 class="projects-title">More Projects</h1>
+    </div>
+
+    <div class="project-grid compact-grid">
+   
+        <a href="project2.html" class="project-link">
+            <div class="project">
+                <img src="img/jotsheroimage.png" alt="Project 3">
+                <h3>Jots App</h3>
+            </div>
+        </a>
+        <a href="project3.html" class="project-link">
+            <div class="project">
+                <img src="img/qiflowhero.png" alt="Project 2">
+                <h3>Qi Flow App</h3>
+            </div>
+        </a>
+        <a href="project4.html" class="project-link">
+            <div class="project">
+                <img src="img/tempmaph1.jpg" alt="Project 4">
+                <h3>MAPh Sculpture Trail</h3>
+            </div>
+        </a>
+    </div>
+</section>
 
     <script> function toggleNav() {
         const navLinks = document.querySelector('.nav-links');
-        navLinks.classList.toggle('active'); // Toggle the 'active' class
+        navLinks.classList.toggle('active'); 
     }
     
     </script>
