--- a/project3.html
+++ b/project3.html
@@ -17,7 +17,7 @@
     <div class="navbar">
         <div class="navbar-brand"><a href="index.html">ALICE BEYER</a></div>
         <button class="toggle-button" onclick="toggleNav()">☰</button>
-        <div class="nav-links"> <!-- Ensure this wrapper is added -->
+        <div class="nav-links"> 
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -35,7 +35,7 @@
     <section class="case-study">
         <img src="img/qiflowhero.png" alt="QiFlow App Main Image" class="main-image">
         <h1 class="case-study-title">QiFlow App</h1>
-        <div class="case-study-date"><strong>April 2024 - June 2024</strong></div> <!-- Date section -->
+        <div class="case-study-date"><strong>April 2024 - June 2024</strong></div>
 
         <div class="case-study-content">
             <h3>Project Overview</h3>
@@ -77,9 +77,39 @@
             <p>The QiFlow app is a digital tool that addresses the growing need for accessible pain management solutions. By incorporating user-centric design principles and leveraging AR technology, QiFlow empowers users to take an active role in managing their chronic pain conditions. This project provided me with valuable experience in UX design, research, and product development, as well a great opportunity for collaboration with my peers to design an app that could improve outcomes for vast numbers of people.</p>
         </div>
     </section>
+
+    <!-- Projects Section -->
+<section class="projects1">
+    <div class="projects-header">
+        <h1 class="projects-title">More Projects</h1>
+    </div>
+
+    <div class="project-grid compact-grid">
+        <a href="project1.html" class="project-link">
+            <div class="project">
+                <img src="img/scapehero.png" alt="Project 1">
+                <h3>Scape Portal App</h3>
+            </div>
+        </a>
+        <a href="project2.html" class="project-link">
+            <div class="project">
+                <img src="img/jotsheroimage.png" alt="Project 3">
+                <h3>Jots App</h3>
+            </div>
+        </a>
+   
+        <a href="project4.html" class="project-link">
+            <div class="project">
+                <img src="img/tempmaph1.jpg" alt="Project 4">
+                <h3>MAPh Sculpture Trail</h3>
+            </div>
+        </a>
+    </div>
+</section>
+
     <script> function toggleNav() {
         const navLinks = document.querySelector('.nav-links');
-        navLinks.classList.toggle('active'); // Toggle the 'active' class
+        navLinks.classList.toggle('active'); 
     }
     
     </script>
