--- a/project4.html
+++ b/project4.html
@@ -25,7 +25,7 @@
     <div class="navbar">
         <div class="navbar-brand"><a href="index.html">ALICE BEYER</a></div>
         <button class="toggle-button" onclick="toggleNav()">☰</button>
-        <div class="nav-links"> <!-- Ensure this wrapper is added -->
+        <div class="nav-links"> 
             <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -44,7 +44,7 @@
     <section class="case-study">
         <img src="img/tempmaph1.jpg" alt="Main Case Study Image" class="main-image">
         <h1 class="case-study-title">Museum of Australian Photography Sculpture Park Trail</h1>
-        <div class="case-study-date"><strong>May 2024 - July 2024</strong></div> <!-- Date section -->
+        <div class="case-study-date"><strong>May 2024 - July 2024</strong></div> 
 
         <div class="case-study-content">
             <h3>Overview</h3>
@@ -69,9 +69,39 @@
             <p>The Maph Children’s Sculpture Trail booklet was an enjoyable and fun project for me to be a part of. Through collaboration with the education department, and continued iteration on the booklet design, I was able to create an engaging resource that supports the museum's educational initiatives. As part of my roles at the gallery, I have been able to see children engaging with the booklet, helping them to fully explore the gallery and sculpture garden. Seeing the impact the booklet has had so far has been highly rewarding for me. </p>
         </div>
     </section>
+
+<!-- Projects Section -->
+<section class="projects1">
+    <div class="projects-header">
+        <h1 class="projects-title">More Projects</h1>
+    </div>
+
+    <div class="project-grid compact-grid">
+        <a href="project1.html" class="project-link">
+            <div class="project">
+                <img src="img/scapehero.png" alt="Project 1">
+                <h3>Scape Portal App</h3>
+            </div>
+        </a>
+        <a href="project2.html" class="project-link">
+            <div class="project">
+                <img src="img/jotsheroimage.png" alt="Project 3">
+                <h3>Jots App</h3>
+            </div>
+        </a>
+        <a href="project3.html" class="project-link">
+            <div class="project">
+                <img src="img/qiflowhero.png" alt="Project 2">
+                <h3>Qi Flow App</h3>
+            </div>
+        </a>
+     
+    </div>
+</section>
+
     <script> function toggleNav() {
         const navLinks = document.querySelector('.nav-links');
-        navLinks.classList.toggle('active'); // Toggle the 'active' class
+        navLinks.classList.toggle('active'); 
     }
     
     </script>
