--- a/project3.html
+++ b/project3.html
@@ -52,7 +52,7 @@
             <ul>
                 <li><strong>Educational Resources:</strong> Videos and blog posts that provide information on pain management techniques, therapeutic exercises, and lifestyle tips.</li>
                 <li><strong>Motivational Elements:</strong> Encouraging self-assessment and progress tracking through a built-in pain scale.</li>
-                <li><strong>Distraction Techniques:</strong> Content focused on helping users shift attention away from pain through guided meditations, relaxing visualizations, and creative activities.</li>
+                <li><strong>Distraction Techniques:</strong> Content focused on helping users shift attention away from pain through guided meditations, relaxing visualisations, and creative activities.</li>
                 <li><strong>TV Casting Capabilities:</strong> The app allows users to cast instructional videos and exercises to a TV screen for a more engaging experience in Qi Gong. This incorporates AR technology, to give feedback to users on their Qi Gong practice.</li>
             </ul>
 
