--- a/project3.html
+++ b/project3.html
@@ -64,7 +64,7 @@
                     <ul>
                         <li>Designed the user interface for the QiFlow app using Figma, focusing on user-facing elements.</li>
                         <li>Created a consistent visual language that reflects the calming and therapeutic objectives of the app.</li>
-                        <li>Used soothing coloUr palettes and accessible typography to meet the needs of our target demographic.</li>
+                        <li>Used soothing colour palettes and accessible typography to meet the needs of our target demographic.</li>
                     </ul>
 
                     <img src="img/QIFINALFRAME2-01.png" alt="Cover design or layout of the booklet" class="case-study-image">
@@ -74,7 +74,7 @@
             <p>This project was helpful in learning the importance of understanding specific needs of a target audience when designing digital health solutions. Through thorough research and empathy-building activities, we identified key motivations and barriers faced by chronic pain sufferers. Developing a user-friendly interface for this demographic required careful consideration of accessibility principles, visual hierarchy, and interaction design.</p>
 
             <h3>Conclusion</h3>
-            <p>The QiFlow app is a digital tool that addresses the growing need for accessible pain management solutions. By incorporating user-centric design principles and leveraging AR technology, QiFlow empowers users to take an active role in managing their chronic pain conditions. This project provided me with valuable experience in UX design, research, and product development, as well a great opportunity for collaboration with my peers to design an app that could improve outcomes for vast numbers of people.</p>
+            <p>The QiFlow app is a digital tool that addresses the growing need for accessible pain management solutions. By incorporating user-centric design principles and leveraging AR technology, QiFlow empowers users to take an active role in managing their chronic pain conditions. This project provided me with valuable experience in UX design, research, and product development, as well a great opportunity for collaboration with my peers to design an app that could improve health outcomes for vast numbers of people.</p>
         </div>
     </section>
 
