--- a/about.html
+++ b/about.html
@@ -38,11 +38,12 @@
   
     <!-- About Section -->
     <section class="about">
-        <h2>About Me</h2>
+        <h2>About</h2>
         <div class="about-content">
             <img src="img/headshot1.png" alt="Alice Beyer Profile Picture" class="headshot-image-about">
             <div class="about-text">
-                <p> <strong>Alice is a digital media design student at RMIT in Melbourne, specialising in UX/UI design.</strong> Her passion for design is driven by a desire to create accessible, intuitive experiences that foster inclusive online communities. With 4 years of experience in the arts industry, she brings a creative, user-centered perspective to her design process, aiming to create work that is visually engaging and meaningful for diverse audiences. </p> <p> Often dubbed the unofficial tech support for her family, she has witnessed the frustration and stress caused by unintuitive interfaces. This experience has fueled her passion for understanding how these problems can be solved in an increasingly digital world and highlighted the importance of creating meaningful and accessible online experiences. </p>
+                <p> <strong>Alice is a digital media design student at RMIT University in Melbourne, specialising in UX/UI design. </strong> Her passion lies in crafting accessible and intuitive experiences that promote inclusivity and foster connected online communities. With four years of experience in the arts industry, she brings a creative and user-centred approach to her work, aiming to design solutions that are both visually compelling and impactful for diverse audiences.
+                   </p><p>Through her customer-facing roles, Alice has gained valuable insight into the challenges people face when interacting with systems and technology. This experience has deepened her empathy for users and strengthened her commitment to solving these challenges in our increasingly digital world by creating meaningful, seamless, and accessible online experiences.</p>
                 <p>
                     <br>
                     <a href="cv/Alice Beyer CV.pdf" class="btn" download>
@@ -56,7 +57,7 @@
 
     <!-- Timeline Section -->
     <section class="timeline">
-        <h2>My Journey So Far</h2>
+        <h2>Timeline</h2>
         <ul>
             <li><strong>2023 — Present:</strong> Gallery Assistant at the Museum of Australian Photography</li>
             <li><strong>2022 — 2025:</strong> Bachelor of Design (Digital Media) at RMIT</li>
